--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -7420,8 +7420,34 @@ body {
   margin: 0;
   padding: 0; }
 
+h1 {
+  color: #fff;
+  line-height: 1em;
+  margin-bottom: 0;
+  font-family: "source_sans_prolight";
+  font-weight: bolder; }
+
+h2 {
+  font-family: "source_sans_prolight";
+  font-weight: bolder; }
+
+p {
+  font-size: 1.2em;
+  text-align: justify; }
+
 a {
-  color: white; }
+  color: #fff; }
+
+.btn {
+  color: black; }
+
+.bg-grey {
+  background-color: #888;
+  color: #fff; }
+
+.bg-blue {
+  background-color: #22a7f0;
+  color: #fff; }
 
 nav ul {
   padding: 0; }
@@ -7444,112 +7470,11 @@ nav ul {
       nav ul li a:hover {
         text-decoration: none; }
 
-.carousel-indicators {
-  margin: 0;
-  position: absolute;
-  bottom: initial;
-  left: initial;
-  width: auto;
-  right: 0;
-  padding-right: 10px;
-  margin-top: 6.5em; }
-  .carousel-indicators li {
-    display: block;
-    border: 1px solid #888;
-    width: 20px;
-    height: 20px;
-    margin-bottom: 0.5em; }
-  .carousel-indicators .active {
-    background-color: #888;
-    width: 20px;
-    height: 20px;
-    margin-bottom: 0.5em; }
-
 .navbar-default .navbar-collapse {
   border: none; }
 
 .navbar-toggle {
   border: none; }
-
-#about-me p {
-  font-size: 1.3em; }
-
-#about-me .row {
-  padding-top: 1em;
-  padding-bottom: 3em; }
-
-.webskills-container li {
-  font-weight: bold;
-  font-size: 1.2em;
-  padding-left: 0.5em;
-  padding-right: 0.5em;
-  display: inline-block; }
-
-.fx-bg-container img, .fx-bg-container p {
-  cursor: pointer; }
-
-.project-container {
-  height: 48em;
-  overflow: hidden; }
-  @media (min-width: 600px) {
-    .project-container {
-      height: 60em; } }
-
-.project {
-  height: 0;
-  opacity: 0; }
-
-.project .col-md-6,
-.project-image img {
-  height: 0; }
-
-.project-image {
-  position: absolute;
-  bottom: -20em;
-  width: 100%; }
-
-.active-project {
-  opacity: 1;
-  -webkit-transition: opacity 1s ease-in-out;
-          transition: opacity 1s ease-in-out;
-  height: 100%;
-  position: relative; }
-
-.active-project h2 {
-  margin-bottom: 0.5em; }
-
-.active-project p {
-  margin-bottom: 1em; }
-
-.active-project img {
-  height: 18em;
-  width: 25em; }
-  @media screen and (min-width: 600px) {
-    .active-project img {
-      height: auto;
-      width: 50em; } }
-
-.active-project .project-image a {
-  display: inline-block; }
-
-.active-project .col-md-6 {
-  height: auto; }
-
-.active-project .project-image {
-  bottom: 0;
-  -webkit-transition: bottom 1s ease-in-out;
-          transition: bottom 1s ease-in-out; }
-
-.bg-grey {
-  background-color: #888;
-  color: white; }
-
-.bg-blue {
-  background-color: #22a7f0;
-  color: white; }
-
-.navMenuCollapse {
-  clear: both; }
 
 .navbar-collapse {
   float: none;
@@ -7568,7 +7493,7 @@ nav ul {
   margin-top: 1em; }
 
 .navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
-  background-color: white; }
+  background-color: #fff; }
 
 .navbar-toggle .icon-bar {
   background-color: #888;
@@ -7598,16 +7523,6 @@ nav ul {
   .navbar > .container .navbar-brand,
   .navbar > .container-fluid .navbar-brand {
     margin-left: 0; } }
-.btn {
-  color: black; }
-
-h1 {
-  color: #fff;
-  line-height: 1em;
-  margin-bottom: 0;
-  font-family: "source_sans_prolight";
-  font-weight: bolder; }
-
 .intro-text p {
   color: #fff;
   font-size: 1.5em;
@@ -7618,15 +7533,21 @@ h1 {
   font-size: 1.3em; }
 
 .intro-text a {
-  color: white; }
+  color: #fff; }
 
-h2 {
-  font-family: "source_sans_prolight";
-  font-weight: bolder; }
+#about-me p {
+  font-size: 1.3em; }
 
-p {
+#about-me .row {
+  padding-top: 1em;
+  padding-bottom: 3em; }
+
+.webskills-container li {
+  font-weight: bold;
   font-size: 1.2em;
-  text-align: justify; }
+  padding-left: 0.5em;
+  padding-right: 0.5em;
+  display: inline-block; }
 
 .fx-bg {
   background: url("../images/project.jpg");
@@ -7637,8 +7558,8 @@ p {
   min-height: 100%;
   color: #fff; }
 
-.scrolling {
-  min-height: 100%; }
+.fx-bg-container img, .fx-bg-container p {
+  cursor: pointer; }
 
 .icon-sportzweekly {
   font-family: "code_boldregular";
@@ -7676,15 +7597,88 @@ p {
       width: 25em; } }
   .logo a {
     display: block;
-    :visited: white; }
+    :visited: #fff; }
     .logo a :hover {
-      color: white; }
+      color: #fff; }
 
 .bj-logo {
   width: 8em; }
   @media (min-width: 600px) {
     .bj-logo {
       width: 10em; } }
+
+.project-container {
+  height: 48em;
+  overflow: hidden; }
+  @media (min-width: 600px) {
+    .project-container {
+      height: 60em; } }
+
+.project {
+  height: 0;
+  opacity: 0; }
+
+.project .col-md-6,
+.project-image img {
+  height: 0; }
+
+.project-image {
+  position: absolute;
+  bottom: -20em;
+  width: 100%; }
+
+.carousel-indicators {
+  margin: 0;
+  position: absolute;
+  bottom: initial;
+  left: initial;
+  width: auto;
+  right: 0;
+  padding-right: 10px;
+  margin-top: 6.5em; }
+  .carousel-indicators li {
+    display: block;
+    border: 1px solid #888;
+    width: 20px;
+    height: 20px;
+    margin-bottom: 0.5em; }
+  .carousel-indicators .active {
+    background-color: #888;
+    width: 20px;
+    height: 20px;
+    margin-bottom: 0.5em; }
+
+.active-project {
+  opacity: 1;
+  -webkit-transition: opacity 1s ease-in-out;
+          transition: opacity 1s ease-in-out;
+  height: 100%;
+  position: relative; }
+
+.active-project h2 {
+  margin-bottom: 0.5em; }
+
+.active-project p {
+  margin-bottom: 1em; }
+
+.active-project img {
+  height: 18em;
+  width: 25em; }
+  @media screen and (min-width: 600px) {
+    .active-project img {
+      height: auto;
+      width: 50em; } }
+
+.active-project .project-image a {
+  display: inline-block; }
+
+.active-project .col-md-6 {
+  height: auto; }
+
+.active-project .project-image {
+  bottom: 0;
+  -webkit-transition: bottom 1s ease-in-out;
+          transition: bottom 1s ease-in-out; }
 
 footer {
   display: block; }
@@ -7695,25 +7689,25 @@ footer {
     padding-top: 1.5em; }
   footer .social-link a {
     display: inline-block;
-    color: white; }
+    color: #fff; }
     footer .social-link a:visited {
-      color: white; }
+      color: #fff; }
   footer .phone-email {
     padding: 0.5em; }
     footer .phone-email a {
-      color: white;
+      color: #fff;
       font-size: 1.5em;
       display: block;
       width: 100%;
       margin: 0 0.5em 0 0.5em; }
       footer .phone-email a:visited {
-        color: white; }
+        color: #fff; }
       @media (min-width: 600px) {
         footer .phone-email a {
           display: inline;
           width: initial; }
           footer .phone-email a:not(:last-child):after {
-            border-right: 1px solid white;
+            border-right: 1px solid #fff;
             content: " ";
             position: relative;
             margin: 0 0.5em 0 0.5em; } }
